comments view overflow fix

--- a/src/app/views/assets/css/styles.css
+++ b/src/app/views/assets/css/styles.css
@@ -19,7 +19,8 @@ nav {
 
 div.imgContainer {
   background-color: #CBC6B6;
-  min-height: 100%;
+  height: 100%;
+  max-height: 1000px;
   width: 75vw;
   align-content:center;
   position:relative;
@@ -109,6 +110,7 @@ a:hover {
   margin:0;
   display:block;
   height:100%;
+  max-height: 800px;
   overflow-y:auto;
   -webkit-overflow-scrolling: touch;
   background-color: #c2c2c2;
@@ -144,7 +146,7 @@ a:hover {
 
 .comment-view {
   display: grid;
-  grid-template-rows: minmax(50%, 80%) minmax(100px, 20%);
+  grid-template-rows: minmax(100px, 20%) minmax(50%, 80%);
 }
 
 .info {
@@ -172,6 +174,7 @@ input {
 }
 
 footer {
+  text-align: center;
   border-top: 0.1px solid #808080;
   background-color: #d3d3d3;
   box-sizing: border-box;
